python_scripts/logs/XGBoost_Randomforest_test.log
nohup: ignoring input
  File "/home/cat/descriptors/python_scripts/descriptor_models.py", line 221
    print("loading feaure from:" running_descriptor)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
